--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<script src="script.js"></script>
+      <div class="button-container">
+          <button id="playButton" type="button">Play game!</button>
+          <div id="rpsButtons" class="hidden">
+            <button type="button">Rock</button>
+            <button type="button">Paper</button>
+            <button type="button">Scissors</button>
+          </div>
+        </div>
+      <script src="script.js"></script>
   </body>
 </html>
